# OpenGL-Project

./: .gitignore  CMakeLists.txt  DEVELOPMENT.md  README.md  main2  main2.cpp  sample  sample.cpp
scripts/: build_linux.sh  build_windows.bat  make_release.sh  make_release_windows.bat  setup_linux.sh
src/: sample.cpp
